--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clean": "rm -rf .next"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -22,7 +23,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-scroll": "^1.9.0",
-    "react-slick": "^0.29.0"
+    "react-slick": "^0.29.0",
+    "sharp": "^0.34.1"
   },
   "devDependencies": {
     "autoprefixer": "^10",
